--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -9,6 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pages\About\ProfessionalProfileContainer.razor.css" />
+    <None Remove="Pages\About\ProfileHeader.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Pages\About\ProfessionalProfileContainer.razor.css" />
+    <Content Include="Pages\About\ProfileHeader.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.11" PrivateAssets="all" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
