--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -25,6 +25,7 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+    <PackageReference Include="Octokit" Version="8.0.1" />
     <PackageReference Include="Radzen.Blazor" Version="4.11.1" />
   </ItemGroup>
 
@@ -35,6 +36,14 @@
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\GitHub\GithubProfile.razor" />
+    <None Include="Pages\GitHub\RepositoryCard.razor" />
+    <None Include="Pages\GitHub\RepositoryCardContent.razor" />
+    <None Include="Pages\GitHub\Searcher.razor" />
+    <None Include="Pages\GitHub\UserInfo.razor" />
   </ItemGroup>
 
 </Project>
