--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.11" />
+    <PackageReference Include="Octokit" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
