--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -1,43 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
-
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-	  <BlazorCacheBootResouces>false</BlazorCacheBootResouces>
+    <TargetFramework>net8.0</TargetFramework>
+    <BlazorCacheBootResouces>false</BlazorCacheBootResouces>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
-
   <ItemGroup>
     <None Remove="Pages\About\ProfessionalProfileContainer.razor.css" />
     <None Remove="Pages\About\ProfileHeader.razor.css" />
   </ItemGroup>
-
   <ItemGroup>
     <Content Include="Pages\About\ProfessionalProfileContainer.razor.css" />
     <Content Include="Pages\About\ProfileHeader.razor.css" />
   </ItemGroup>
-
   <ItemGroup>
     <!--<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.11" />-->
-	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.0" />
-	  <!--<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.11" PrivateAssets="all" />-->
-	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+    <!--<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.11" PrivateAssets="all" />-->
     <PackageReference Include="Octokit" Version="8.0.1" />
     <PackageReference Include="Radzen.Blazor" Version="4.11.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Repository\Repository.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
-
   <ItemGroup>
     <None Include="Pages\GitHub\GithubProfile.razor" />
     <None Include="Pages\GitHub\RepositoryCard.razor" />
@@ -45,5 +38,4 @@
     <None Include="Pages\GitHub\Searcher.razor" />
     <None Include="Pages\GitHub\UserInfo.razor" />
   </ItemGroup>
-
 </Project>
